composer set to drupal, remove jQuery usage as promised, rename lib

--- a/obfuscate_email_field.info.yml
+++ b/obfuscate_email_field.info.yml
@@ -1,6 +1,6 @@
-name: Obfuscate Email Field
+name: 'Obfuscate Email Field'
 type: module
-description: Twig Template to obfuscate a field_email
+description: 'Twig Template to obfuscate a field_email'
 core: 8.x
 package: Wondrous
 dependencies:
