--- a/obfuscate_email_field.info.yml
+++ b/obfuscate_email_field.info.yml
@@ -2,6 +2,6 @@ name: 'Obfuscate Email Field'
 type: module
 description: 'Twig Template to obfuscate a field_email'
 core: 8.x
-package: Wondrous
+package: Fields
 dependencies:
   - rot13
